# stars

./: .gitignore  .project  README.md  gradle.properties  settings.gradle
docs/: S-Tars.xmind
gradle/wrapper/: gradle-wrapper.properties
media/: .project  CMakeLists.txt  build.gradle  proguard-rules.pro
media/src/main/: AndroidManifest.xml
media/src/main/cpp/: ai_args.h  audio_frame.cpp  audio_frame.h  audio_player.h  audio_recorder.cpp  audio_recorder.h  camera.cpp  camera.h  camera_paint.cpp  camera_paint.h  camera_proc.cpp  common.cpp  common.h  distortedtv_paint.cpp  distortedtv_paint.h  effect_selector_paint.cpp  effect_selector_paint.h  face_paint.cpp  face_paint.h  fbo_paint.cpp  fbo_paint.h  fbo_shader.h  ffmpeg_args.h  ffmpeg_h264.cpp  ffmpeg_h264.h  ffmpeg_loudnorm.cpp  ffmpeg_loudnorm.h  ffmpeg_mp4.cpp  ffmpeg_mp4.h  flame_paint.cpp  flame_paint.h  gl_paint.cpp  gl_paint.h  h264_encoder.cpp  h264_encoder.h  image_frame.cpp  image_frame.h  image_recorder.cpp  image_recorder.h  image_renderer.cpp  (+32 more)
media/src/main/cpp/audio/collect/: audio_recorder.cpp  audio_recorder.h
media/src/main/cpp/audio/play/: audio_player.cpp
media/src/main/cpp/image/collect/: camera.cpp  camera.h  image_recorder.cpp  image_recorder.h
media/src/main/cpp/image/play/: camera_paint.cpp  camera_paint.h  image_renderer.cpp  image_renderer.h  paint.h  renderer.h
media/src/main/cpp/lamemp3/: fft.c
media/src/main/cpp/loop/: config.h  loop.cpp  loop.h  safe_queue.hpp
media/src/main/cpp/proc/: audio_frame.cpp  audio_frame.h  ffmpeg.cpp  ffmpeg.h  ffmpeg_h264.cpp  ffmpeg_h264.h  ffmpeg_loudnorm.cpp  ffmpeg_loudnorm.h  ffmpeg_mp4.cpp  ffmpeg_mp4.h  ffmpeg_rtmp.cpp  ffmpeg_rtmp.h  image_frame.cpp  image_frame.h  mnn.cpp  mnn.h  opencv.h  proc.h  proc_frame.h  tflite.cpp  tflite.h  webrtc_ns.cpp  webrtc_ns.h
media/src/main/cpp/video/: camera_paint.h  collect_params.hpp  encode_params.hpp  image_recorder.cpp  image_recorder.h  image_renderer.cpp  image_renderer.h  renderer.h  video_collector.hpp  video_encoder.hpp  video_recorder.cpp  video_recorder.h
media/src/main/cpp/video/collect/: camera.cpp  camera.h  camera_proc.cpp  image_cache.cpp  image_cache.h  image_recorder.cpp  image_recorder.h  recorder.h  yuv2argb.cpp
media/src/main/cpp/video/play/: camera_paint.cpp  camera_paint.h  image_renderer.cpp  image_renderer.h  paint.h  renderer.h
media/src/main/cpp/video/proc/: mnn.cpp  mnn.h
media/src/main/java/com/scliang/tars/: DemoActivity.java  MainActivity.java  Media.java  MediaGLView.java  PlayerActivity.java  RecorderActivity.java
media/src/main/res/layout/: activity_main.xml  activity_player.xml  activity_recorder.xml
media/src/main/res/raw/: shader_frag_effect_blur.glsl  shader_frag_effect_distortedtv.glsl  shader_frag_effect_distortedtv_box.glsl  shader_frag_effect_distortedtv_glitch.glsl
media/src/main/res/values/: themes.xml
media/src/main/res/values-night/: themes.xml
recorder/: CMakeLists.txt  build.gradle
recorder/src/main/: AndroidManifest.xml
recorder/src/main/cpp/: common.cpp  common.h  jni.cpp  log.h
recorder/src/main/cpp/lamemp3/: lame.c  util.c
recorder/src/main/cpp/loop/: loop.cpp  safe_queue.hpp
recorder/src/main/cpp/video/: camera_paint.cpp  camera_paint.h  image_recorder.cpp  image_recorder.h  paint.h
recorder/src/main/java/com/scliang/tars/: DemoActivity.java  MainActivity.java  Recorder.java  RecorderView.java
recorder/src/main/res/layout/: activity_main.xml
recorder/src/main/res/values-night/: themes.xml
